Reduced program code by about 50%